Drop `.dropdown-toggle-*`, add `.btn-group-end`, add `.btn-icon`, adjust `.caret`, update docs and tests

--- a/test/dev/styles.html
+++ b/test/dev/styles.html
@@ -1485,213 +1485,6 @@ Showing a <kbd>kdb sample</kbd>
     </div>
 </div>
 
-
-<h3>Input groups</h3>
-<div class="input-group">
-  <div class="input-group-addon">
-    <div class="input-group-text" id="basic-addon1">@</div>
-  </div>
-  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
-</div>
-<br>
-<div class="input-group">
-  <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
-  <div class="input-group-addon">
-    <div class="input-group-text" id="basic-addon2">@example.com</div>
-  </div>
-</div>
-<br>
-<label for="basic-url">Your vanity URL</label>
-<div class="input-group">
-  <div class="input-group-addon">
-    <div class="input-group-text" id="basic-addon3">https://example.com/users/</div>
-  </div>
-  <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
-</div>
-<br>
-<div class="input-group">
-  <div class="input-group-addon">
-    <div class="input-group-text">$</div>
-  </div>
-  <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-  <div class="input-group-addon">
-    <div class="input-group-text">.00</div>
-  </div>
-</div>
-
-<h3>Input group sizes</h3>
-<div class="input-group input-group-xlarge">
-  <div class="input-group-addon">
-    <div class="input-group-text" id="sizing-addon1">@</div>
-  </div>
-  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon1">
-</div>
-<br />
-<div class="input-group input-group-large">
-  <div class="input-group-addon">
-    <div class="input-group-text" id="sizing-addon2">@</div>
-  </div>
-  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon2">
-</div>
-<br />
-<div class="input-group">
-  <div class="input-group-addon">
-    <div class="input-group-text" id="sizing-addon3">@</div>
-  </div>
-  <input type="text" class="form-control" placeholder="Username"aria-label="Username" aria-describedby="sizing-addon3">
-</div>
-<br />
-<div class="input-group input-group-small">
-  <div class="input-group-addon">
-    <div class="input-group-text" id="sizing-addon4">@</div>
-  </div>
-  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon4">
-</div>
-<br />
-<div class="input-group input-group-xsmall">
-  <div class="input-group-addon">
-    <div class="input-group-text" id="sizing-addon5">@</div>
-  </div>
-  <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="sizing-addon5">
-</div>
-<br />
-
-<h3>Input group checkbox and radio</h3>
-<div class="row">
-  <div class="col-lg-6">
-    <div class="input-group">
-      <div class="input-group-addon">
-        <div class="input-group-text">
-            <input type="checkbox" aria-label="Checkbox for following text input">
-        </div>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with checkbox">
-    </div>
-  </div>
-  <div class="col-lg-6">
-    <div class="input-group">
-      <div class="input-group-addon">
-        <div class="input-group-text">
-            <input type="radio" aria-label="Radio button for following text input">
-        </div>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with radio button">
-    </div>
-  </div>
-</div>
-
-<h3>Input group with buttons</h3>
-<div class="row">
-  <div class="col-lg-6">
-    <div class="input-group">
-      <span class="input-group-addon">
-        <button class="btn" type="button">Go!</button>
-      </span>
-      <input type="text" class="form-control" placeholder="Search for...">
-    </div>
-  </div>
-  <div class="col-lg-6">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search for...">
-      <span class="input-group-addon">
-        <button class="btn btn-outline-primary" type="button">Go!</button>
-      </span>
-    </div>
-  </div>
-</div>
-<br>
-<div class="row">
-  <div class="col-lg-offset-3 col-lg-6">
-    <div class="input-group">
-      <span class="input-group-addon">
-        <button class="btn btn-secondary" type="button">Hate it</button>
-      </span>
-      <input type="text" class="form-control" placeholder="Product name">
-      <span class="input-group-addon">
-        <button class="btn btn-secondary" type="button">Love it</button>
-      </span>
-    </div>
-  </div>
-</div>
-
-<h3>Input group button dropdown</h3>
-<div class="row">
-  <div class="col-lg-6">
-    <div class="input-group">
-      <div class="input-group-addon">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
-          Action
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="dropdown-divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with dropdown button">
-    </div>
-  </div>
-  <div class="col-lg-6">
-    <div class="input-group">
-      <input type="text" class="form-control" aria-label="Text input with dropdown button">
-      <div class="input-group-addon dropdown-menu-reverse">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
-          Action
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="dropdown-divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
-<h3>Input group split buttons</h3>
-<div class="row">
-  <div class="col-lg-6">
-    <div class="input-group">
-      <div class="input-group-addon">
-        <button type="button" class="btn btn-secondary">Action</button>
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
-          <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="dropdown-divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </div>
-      <input type="text" class="form-control" aria-label="Text input with segmented button dropdown">
-    </div>
-  </div>
-  <div class="col-lg-6">
-    <div class="input-group">
-      <input type="text" class="form-control" aria-label="Text input with segmented button dropdown">
-      <div class="input-group-addon dropdown-menu-reverse">
-        <button type="button" class="btn btn-secondary">Action</button>
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
-          <span class="sr-only">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-          <li><a href="#">Action</a></li>
-          <li><a href="#">Another action</a></li>
-          <li><a href="#">Something else here</a></li>
-          <li class="dropdown-divider"></li>
-          <li><a href="#">Separated link</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
-
 <h3>Breadcrumb</h3>
 <ul class="breadcrumb">
   <li class="breadcrumb-item active">Home</li>
@@ -1902,8 +1695,8 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Dropdown</h3>
 <div class="dropdown-sample open clearfix">
-    <button class="btn btn-info dropdown-toggle" type="button">
-        Dropdown
+    <button class="btn btn-info" type="button">
+        Dropdown <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Sample Header</li>
@@ -1940,27 +1733,13 @@ Showing a <kbd>kdb sample</kbd>
       </ul>
     </div>
 </div>
-<div class="dropdown-single">
-    Using .dropdown-toggle:
-    <div class="btn-group">
-      <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown">
-        Action
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Action</a></li>
-        <li><a class="dropdown-item" href="#">Another action</a></li>
-        <li><a class="dropdown-item" href="#">Something else here</a></li>
-        <li><li class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="#">Separated link</a></li>
-      </ul>
-    </div>
-</div>
 
 <h3>Dropdown - split button</h3>
 <div class="btn-group">
   <button type="button" class="btn btn-danger">Action</button>
-  <button type="button" class="btn btn-danger dropdown-toggle" data-cfw="dropdown">
+  <button type="button" class="btn btn-icon btn-danger btn-group-end" data-cfw="dropdown">
     <span class="sr-only">Toggle Dropdown</span>
+    <span class="caret"></span>
   </button>
   <ul class="dropdown-menu">
     <li><a class="dropdown-item" href="#">Action</a></li>
@@ -1974,8 +1753,8 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Dropdown - Menu Alignment</h3>
 <div class="clearfix">
     <div class="btn-group">
-        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
-            Default <!-- <span class="caret" aria-hidden="true"></span> -->
+        <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
+            Default <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
             <li class="dropdown-header">Dropdown header</li>
@@ -2033,8 +1812,8 @@ Showing a <kbd>kdb sample</kbd>
     </div>
 
     <div class="btn-group dropup">
-        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown">
-            Drop Up <!-- <span class="caret" aria-hidden="true"></span> -->
+        <button type="button" class="btn btn-group-end" data-cfw="dropdown">
+            Drop Up <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
             <li class="dropdown-header">Dropdown header</li>
@@ -2092,8 +1871,8 @@ Showing a <kbd>kdb sample</kbd>
     </div>
 
     <div class="btn-group dropdown-menu-reverse" style="float: right;">
-        <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
-            Drop Left <!-- <span class="caret" aria-hidden="true"></span> -->
+        <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
+            Drop Left <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
             <li class="dropdown-header">Dropdown header</li>
@@ -2153,8 +1932,8 @@ Showing a <kbd>kdb sample</kbd>
 
 <h3>Dropdown - submenu alignment</h3>
 <div class="btn-group">
-    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
-        Default<!-- <span class="caret" aria-hidden="true"></span> -->
+    <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
+        Default<span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
@@ -2203,8 +1982,8 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <div class="btn-group dropdown-menu-forward">
-    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
-        Drop Right <!-- <span class="caret" aria-hidden="true"></span> -->
+    <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
+        Drop Right <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
@@ -2253,8 +2032,8 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <div class="btn-group dropdown-menu-reverse" style="float: right;">
-    <button type="button" class="btn btn-default dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
-        Drop Left <!-- <span class="caret" aria-hidden="true"></span> -->
+    <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
+        Drop Left <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
@@ -2305,8 +2084,8 @@ Showing a <kbd>kdb sample</kbd>
 <h3>Dropup submenu alignment</h3>
 
 <div class="btn-group dropup">
-    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
-        Dropup
+    <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true">
+        Dropup <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
@@ -2356,8 +2135,8 @@ Showing a <kbd>kdb sample</kbd>
 
 
 <div class="btn-group dropup dropdown-menu-forward">
-    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
-        Dropup Right
+    <button type="button" class="btn btn-group-end" data-cfw="dropdown" data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
+        Dropup Right <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
@@ -2406,8 +2185,8 @@ Showing a <kbd>kdb sample</kbd>
 </div>
 
 <div class="btn-group dropup dropdown-menu-reverse">
-    <button type="button" class="btn dropdown-toggle" data-cfw="dropdown data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
-        Dropup Left
+    <button type="button" class="btn btn-group-end" data-cfw="dropdown data-cfw-dropdown-backlink="true" data-cfw-dropdown-backtop="true">
+        Dropup Left <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
         <li class="dropdown-header">Dropdown header</li>
@@ -2570,7 +2349,7 @@ Showing a <kbd>kdb sample</kbd>
     <a class="nav-link active" href="#">Active</a>
   </li>
   <li class="nav-item dropdown">
-    <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+    <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown<span class="caret ms-0_25"></span></a>
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -2593,7 +2372,7 @@ Showing a <kbd>kdb sample</kbd>
     <a class="nav-link active" href="#">Active</a>
   </li>
   <li class="nav-item dropdown">
-    <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+    <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown<span class="caret ms-0_25"></span></a>
     <ul class="dropdown-menu">
       <li><a class="dropdown-item" href="#">Action</a></li>
       <li><a class="dropdown-item" href="#">Another action</a></li>
