--- a/test/visual/button-group.html
+++ b/test/visual/button-group.html
@@ -50,8 +50,8 @@
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
             <div class="btn-group" role="group">
-                <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
-                Dropdown
+                <button type="button" class="btn" data-cfw="dropdown">
+                Dropdown <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
@@ -61,8 +61,8 @@
         <button type="button" class="btn">Button</button>
         <button type="button" class="btn">Button</button>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
-                Dropdown
+            <button type="button" class="btn" data-cfw="dropdown">
+                Dropdown <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
@@ -70,8 +70,8 @@
             </ul>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
-                Dropdown
+            <button type="button" class="btn" data-cfw="dropdown">
+                Dropdown <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
@@ -79,8 +79,8 @@
             </ul>
         </div>
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
-                Dropdown
+            <button type="button" class="btn btn-group-end" data-cfw="dropdown">
+                Dropdown <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
@@ -147,8 +147,9 @@
         <button type="button" class="btn">2</button>
 
         <div class="btn-group" role="group">
-            <button type="button" class="btn dropdown-toggle" data-cfw="dropdown">
+            <button type="button" class="btn btn-group-end" data-cfw="dropdown">
                 Dropdown
+                <span class="caret"></span>
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Dropdown link</a></li>
