--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -249,8 +249,8 @@
 <div class="d-flex">
   <div class="input-group">
     <div class="input-group-addon">
-      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Action
+      <button type="button" class="btn btn-secondary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Action <span class="caret"></span>
       </button>
       <div class="dropdown-menu">
         <a class="dropdown-item" href="#">Action</a>
@@ -688,8 +688,8 @@
   <div class="col-lg-6">
     <div class="input-group">
       <div class="input-group-addon">
-        <button type="button" class="btn btn-secondary dropdown-toggle" data-cfw="dropdown">
-          Action
+        <button type="button" class="btn btn-secondary" data-cfw="dropdown">
+          Action <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
           <li><a href="#">Action</a></li>
@@ -706,8 +706,8 @@
     <div class="input-group">
       <input type="text" class="form-control" aria-label="Text input with dropdown button">
       <div class="input-group-addon dropdown-menu-reverse">
-        <button type="button" class="btn btn-secondary dropdown-toggle input-group-end" data-cfw="dropdown">
-          Action
+        <button type="button" class="btn btn-secondary input-group-end" data-cfw="dropdown">
+          Action <span class="caret"></span>
         </button>
         <ul class="dropdown-menu">
           <li><a href="#">Action</a></li>
@@ -728,7 +728,7 @@
         <button type="button" class="btn btn-outline-secondary">Action</button>
     </div>
     <div class="input-group-addon">
-        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-cfw="dropdown" aria-label="Toggle Dropdown"></button>
+        <button type="button" class="btn btn-icon btn-outline-secondary" data-cfw="dropdown" aria-label="Toggle Dropdown"><span class="caret"></span></button>
         <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
@@ -746,7 +746,7 @@
         <button type="button" class="btn btn-outline-secondary">Action</button>
     </div>
     <div class="input-group-addon dropdown-menu-reverse">
-        <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split input-group-end" data-cfw="dropdown" aria-label="Toggle Dropdown"></button>
+        <button type="button" class="btn btn-icon btn-outline-secondary input-group-end" data-cfw="dropdown" aria-label="Toggle Dropdown"><span class="caret"></span></button>
         <ul class="dropdown-menu ">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
