--- a/test/visual/nav.html
+++ b/test/visual/nav.html
@@ -133,7 +133,7 @@
             <a class="nav-link active" href="#">Active</a>
         </li>
         <li class="nav-item dropdown">
-            <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+            <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
@@ -157,7 +157,7 @@
             <a class="nav-link active" href="#">Active</a>
         </li>
         <li class="nav-item dropdown">
-            <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+            <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Action</a></li>
                 <li><a class="dropdown-item" href="#">Another action</a></li>
