--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -42,7 +42,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+                <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -75,7 +75,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a href="#" role="button" class="nav-link dropdown-toggle" data-cfw="dropdown">Dropdown</a>
+                <a href="#" role="button" class="nav-link" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -110,7 +110,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -143,7 +143,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -176,7 +176,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -209,7 +209,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -242,7 +242,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -277,7 +277,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -313,7 +313,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                     <div class="dropdown-menu">
                         <a href="#">Action</a>
                         <a href="#">Another action</a>
@@ -349,7 +349,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                 <div class="dropdown-menu">
                     <a href="#">Action</a>
                     <a href="#">Another action</a>
@@ -379,7 +379,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                     <div class="dropdown-menu">
                         <a href="#">Action</a>
                         <a href="#">Another action</a>
@@ -412,7 +412,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                     <div class="dropdown-menu">
                         <a href="#">Action</a>
                         <a href="#">Another action</a>
@@ -445,7 +445,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-cfw="dropdown">Dropdown</a>
+                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
                     <div class="dropdown-menu">
                         <a href="#">Action</a>
                         <a href="#">Another action</a>
