--- a/test/visual/tooltip.html
+++ b/test/visual/tooltip.html
@@ -44,19 +44,19 @@
 </head>
 <body>
 
-<button class="btn btn-default float-start" title="Tooltip at start" data-cfw="tooltip" data-cfw-tooltip-placement="reverse auto">Tooltip at start</button>
+<button class="btn float-start" title="Tooltip at start" data-cfw="tooltip" data-cfw-tooltip-placement="reverse auto">Tooltip at start</button>
 
-<button class="btn btn-default" title="Tooltip at top" data-cfw="tooltip" data-cfw-tooltip-placement="top auto">Tooltip at top</button>
+<button class="btn" title="Tooltip at top" data-cfw="tooltip" data-cfw-tooltip-placement="top auto">Tooltip at top</button>
 
-<button class="btn btn-default float-end" title="Tooltip at end" data-cfw="tooltip" data-cfw-tooltip-placement="forward auto">Tooltip at end</button>
+<button class="btn float-end" title="Tooltip at end" data-cfw="tooltip" data-cfw-tooltip-placement="forward auto">Tooltip at end</button>
 
-<button class="btn btn-default" style="position: absolute; left: 0; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="bottom auto">Tooltip at bottom</button>
+<button class="btn" style="position: absolute; left: 0; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="bottom auto">Tooltip at bottom</button>
 
-<button class="btn btn-default" style="position: absolute; left: 12rem; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="forward">Tooltip at bottom</button>
+<button class="btn" style="position: absolute; left: 12rem; bottom: 0;" title="Tooltip at bottom" data-cfw="tooltip" data-cfw-tooltip-placement="forward">Tooltip at bottom</button>
 
 
-<button class="btn btn-default" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
-<button class="btn btn-default" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
+<button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
+<button class="btn" title="Popover at top" data-cfw="popover" data-cfw-popover-placement="top auto" data-cfw-popover-drag="true" data-cfw-popover-content="Wow">Popover at top</button>
 
 <button class="btn btn-primary" data-cfw="modal" data-cfw-modal-target="#saveModal">New</button>
 
@@ -69,7 +69,7 @@
             </div>
             <div class="modal-body">
                 <button id="btnTest0" class="btn btn-primary" data-cfw="tooltip" data-cfw-tooltip-placement="forward" data-cfw-tooltip-trigger="click" title="Test">Test tooltip</button>
-                <p>This <button type="button"  class="btn btn-default" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
+                <p>This <button type="button"  class="btn" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-cfw-dismiss="modal">Cancel</button>
@@ -88,7 +88,7 @@
             </div>
             <div class="modal-body">
                 <button id="btnTest1" class="btn btn-primary" data-cfw="tooltip" data-cfw-tooltip-placement="forward" data-cfw-tooltip-trigger="click" title="Test">Test tooltip</button>
-                <p>This <button type="button"  class="btn btn-default" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
+                <p>This <button type="button"  class="btn" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-cfw-dismiss="modal">Cancel</button>
