Input Group: Drop `.btn-group` styles and add `.btn-check`
- Button group support not needed since mulitple buttons in an addon with `aria-label` can achieve same effect.
- Added example to docs

--- a/test/visual/input-group.html
+++ b/test/visual/input-group.html
@@ -799,31 +799,31 @@
   </div>
 </div>
 
-<h2>Button Group</h2>
-<form class="mb-1">
-    <div class="input-group">
-        <div class="input-group-addon">
-            <div class="input-group-text">Something:</div>
-        </div>
-        <div class="input-group-addon">
-            <div class="btn-group" role="group" aria-label="Basic example">
-                <button class="btn btn-outline-primary" type="button">All</button>
-                <button class="btn btn-outline-success" type="button">Yes</button>
-            </div>
-        </div>
-        <div class="input-group-addon">
-            <button class="btn btn-outline-danger" type="button">No</button>
-        </div>
-    </div>
-</form>
-
 <h2>Button Check</h2>
 <form class="mb-1">
     <div class="input-group">
         <input type="text" class="form-control" placeholder="Some input..." aria-label="Username">
-        <div class="input-group-addon btn-check">
-            <input id="checkbox0" type="checkbox" class="btn-check-input">
-            <label for="checkbox0" class="btn btn-info">Single toggle</label>
+        <div class="input-group-addon">
+            <div class="btn-check">
+                <input id="checkbox0" type="checkbox" class="btn-check-input">
+                <label for="checkbox0" class="btn btn-info">Single toggle</label>
+            </div>
+        </div>
+    </div>
+</form>
+
+<div class="input-group">
+    <div class="input-group-addon">
+        <div class="btn-check">
+            <input id="btn-check-0" type="checkbox" class="btn-check-input">
+            <label for="btn-check-0" class="btn">Checkbox Button</label>
+        </div>
+    </div>
+    <input type="text" aria-label="Text input with checkbox buttons" class="form-control">
+    <div class="input-group-addon">
+        <div class="btn-check">
+            <input id="btn-check-1" type="checkbox" class="btn-check-input">
+            <label for="btn-check-1" class="btn">Checkbox Button</label>
         </div>
     </div>
 </div>
